--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular-expressions": "^0.2.1"
+    "angular-expressions": "^0.2.1",
+    "bluebird": "^2.3.6"
   }
 }
