--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "angular-expressions": "^0.2.1",
     "bluebird": "^2.3.6",
-    "commander": "^2.5.0"
+    "commander": "^2.5.0",
+    "memory-stream": "0.0.3"
   }
 }
